force-app/main/default/objects/vlocity_ins__DocumentTemplateElement__c/fields/vlocity_ins__DocumentTemplateId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocumentTemplateId__c</fullName>
    <label>Document Template</label>
    <referenceTo>vlocity_ins__DocumentTemplate__c</referenceTo>
    <relationshipLabel>Document Template Elements</relationshipLabel>
    <relationshipName>DocumentTemplateElements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>