force-app/main/default/objects/vlocity_ins__DocumentTemplateElement__c/fields/vlocity_ins__ElementStage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ElementStage__c</fullName>
    <label>Element Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Replaced Clause Content</fullName>
            </value>
            <value>
                <fullName>Formatted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>